syntax = "proto3";

package StorageCloud;

message Param {
    string paramId = 1;
    oneof value {
        string SParamVal = 2;
        int64 IParamVal = 3;
    }
}

message Command {
    // TODO uzupelnic wszystkie typy
    enum CommandType {
        NULL = 0;
        LOGIN = 1;
        RELOGIN = 2;
        LOGOUT = 3;
        REGISTER = 4;
        STAT = 5;
        LIST_FILES = 6;
    }

    CommandType type = 1;

    repeated Param params = 2;

    // używane do list plików/użytkowników/etc
    repeated string list = 3;

    bytes data = 4;
}

message EncodedMessage {
    uint64 dataSize = 1;

    enum HashAlgorithm {
        NULL = 0;
        NOHASH = 1;
        SHA256 = 2;
        SHA512 = 3;
        SHA1 = 4;
        MD5 = 5;
    }

    HashAlgorithm hashAlgorithm = 2;

    bytes hash = 3;

    enum MessageType {
        NULL2 = 0;
        COMMAND = 1;
        SERVER_RESPONSE = 2;
        HANDSHAKE = 3;
    }

    MessageType type = 4;

    bytes data = 5;
}

message Handshake {
    enum EncryptionAlgorithm {
        NULL = 0;
        NOENCRYPTION = 1;
        CAESAR = 2;
    }

    EncryptionAlgorithm encryptionAlgorithm = 1;
}

message File {
    string name = 1;
    int64 size = 2;
    repeated Param metadata = 3;
}

message ServerResponse {
    enum ResponseType {
        NULL = 0;
        OK = 1;
        ERROR = 2;
        LOGGED = 3;
        STAT = 4;
        FILES = 5;
        SHARED = 6;
        DATA = 7;
        CAN_SEND = 8;
    }

    ResponseType type = 1;

    repeated Param params = 2;

    repeated string list = 3;

    repeated File fileList = 4;

    bytes data = 5;
}
