syntax = "proto3";

package StorageCloud;

message Param {
    string paramId = 1;
    oneof value {
        string SParamVal = 2;
        int64 IParamVal = 3;
        bytes BParamVal = 4;
    }
}

option java_package = "com.github.mikee2509.storagecloud.proto";
option java_multiple_files = true;

message EncodedMessage {
    uint64 dataSize = 1;
    HashAlgorithm hashAlgorithm = 2;
    bytes hash = 3;
    MessageType type = 4;
    bytes data = 5;
}

enum HashAlgorithm {
    NULL2 = 0;
    H_NOHASH = 1;
    H_SHA256 = 2;
    H_SHA512 = 3;
    H_SHA1 = 4;
    H_MD5 = 5;
}

enum MessageType {
    NULL3 = 0;
    COMMAND = 1;
    SERVER_RESPONSE = 2;
    HANDSHAKE = 3;
}

message Command {
    CommandType type = 1;
    repeated Param params = 2;
    repeated string list = 3; // używane do list plików/użytkowników/etc
    bytes data = 4;
}

enum CommandType {
    NULL1 = 0;
    LOGIN = 1;
    RELOGIN = 2;
    LOGOUT = 3;
    REGISTER = 4;
    GET_STAT = 5;
    LIST_FILES = 6;
    MKDIR = 7;
    DELETE = 8;
    C_DOWNLOAD = 9;
    SHARE = 10;
    LIST_SHARED = 11;
    ADMIN_LIST_SHARED = 12;
    DOWNLOAD = 13;
    METADATA = 14;
    USR_DATA = 15;
    UNSHARE = 16;
    DELETE_USER = 17;
    CHANGE_USER_PASS = 18;
    USER_STAT = 19;
    LIST_USER_FILES = 20;
    DELETE_USER_FILE = 21;
    ADMIN_UNSHARE = 22;
    ADMIN_SHARE_INFO = 23;
    WARN = 24;
    LIST_USERS = 25;
    CHANGE_PASSWD = 26;
    CLEAR_CACHE = 27;
    CHANGE_QUOTA = 28;
    SHARED_DOWNLOAD = 29;
    SHARED_INFO = 30;
}

enum FileType {
    NULL6 = 0;
    FILE = 1;
    DIRECTORY = 2;
}

message File {
    string filename = 1; //with path
    FileType filetype = 2;
    uint64 size = 3; //for directory it's files count inside
    bytes hash = 4; // empty for directory
    string owner = 5;
    string ownerUsername = 6;
    uint64 creationDate = 7;
    bool isShared = 8; // if shared with anyone
}

enum UserRole {
    NULL7 = 0;
    USER = 1;
    ADMIN = 2;
}

enum ResponseType {
    NULL5 = 0;
    OK = 1;
    ERROR = 2;
    LOGGED = 3;
    STAT = 4;
    FILES = 5;
    SHARED = 6;
    SRV_DATA = 7;
    CAN_SEND = 8;
    USERS = 9;
}

message Handshake {
    EncryptionAlgorithm encryptionAlgorithm = 1;
}

enum EncryptionAlgorithm {
    NULL4 = 0;
    NOENCRYPTION = 1;
    CAESAR = 2;
}

message UserDetails {
    string username = 1;
    string firstName = 2;
    string lastName = 3;
    UserRole role = 4;
    uint64 totalSpace = 5;
    uint64 usedSpace = 6;
}

message ServerResponse {
    ResponseType type = 1;
    repeated Param params = 2;
    repeated string list = 3;
    repeated File fileList = 4;
    repeated UserDetails userList = 5;
    bytes data = 6;
}
